frontend/components/Header/components/SearchBlock/SearchModal.module.scss
@use '@styles/mixins.scss' as *;

.search-modal {
    position: absolute;
    margin-top: 0.75em;

    @include flex-column;

    background-color: var(--main-bg-color);

    border-radius: 10px;

    padding: 0.75em 0;

    height: 400px;

    box-sizing: border-box;

    overflow: scroll;

    z-index: 11;
}

.search-product {
    @include flex-y-center;
    gap: 0.75em;

    width: 100%;
    height: 50px;

    padding: 0 1.25em;
    box-sizing: border-box;

    text-decoration: none;

    transition: background-color 0.1s ease;

    &:hover {
        background-color: var(--background-color);
    }
}

.title {
    @include text-wo-margin(1rem);
    font-weight: 700;
    color: var(--font-color);
}
.price {
    @include text-wo-margin(1rem);
    color: var(--secondary-font-color);
}

.hint-box {
    @include flex-center;

    width: 100%;
    height: 100%;

    padding: 2em;
    box-sizing: border-box;
}
.hint {
    @include text-wo-margin(1.25rem);
    font-weight: 500;
    color: var(--secondary-font-color);
    text-align: center;
}

